// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`erases ambient TypeScript declarations 1`] = `
{
  "autodisplay": false,
  "body": "() => {

}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`erases ambient TypeScript declarations 2`] = `
{
  "autodisplay": false,
  "body": "() => {

}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`erases ambient TypeScript declarations 3`] = `
{
  "autodisplay": false,
  "body": "() => {

}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`ignores non-bare Observable JavaScript dynamic imports 1`] = `
{
  "autodisplay": true,
  "automutable": false,
  "autoview": false,
  "body": "function(){return(
import("./local.js")
)}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "secrets": Set {},
}
`;

exports[`ignores non-bare Observable JavaScript dynamic imports 2`] = `
{
  "autodisplay": true,
  "automutable": false,
  "autoview": false,
  "body": "function(){return(
import("../sibling.js")
)}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "secrets": Set {},
}
`;

exports[`ignores non-bare Observable JavaScript dynamic imports 3`] = `
{
  "autodisplay": true,
  "automutable": false,
  "autoview": false,
  "body": "function(){return(
import("/abs.js")
)}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "secrets": Set {},
}
`;

exports[`ignores non-bare Observable JavaScript dynamic imports 4`] = `
{
  "autodisplay": true,
  "automutable": false,
  "autoview": false,
  "body": "function(){return(
import("https://cdn.skypack.dev/canvas-confetti")
)}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "secrets": Set {},
}
`;

exports[`ignores non-bare Observable JavaScript dynamic imports 5`] = `
{
  "autodisplay": true,
  "automutable": false,
  "autoview": false,
  "body": "function(){return(
import("npm:d3")
)}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "secrets": Set {},
}
`;

exports[`strips TypeScript type syntax 1`] = `
{
  "autodisplay": false,
  "body": "(x) => {
x;
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "x",
  ],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`strips TypeScript type syntax 2`] = `
{
  "autodisplay": false,
  "body": "(obj) => {
obj.value;
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "obj",
  ],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`strips TypeScript type syntax 3`] = `
{
  "autodisplay": false,
  "body": "(value) => {
(value);
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "value",
  ],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`strips TypeScript type syntax 4`] = `
{
  "autodisplay": false,
  "body": "(identity) => {
identity(42);
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "identity",
  ],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`strips TypeScript type syntax 5`] = `
{
  "autodisplay": false,
  "body": "() => {
new Map();
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`strips TypeScript type syntax 6`] = `
{
  "autodisplay": false,
  "body": "() => {
function f(a, b) { return a; }
return {f};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [
    "f",
  ],
  "secrets": Set {},
}
`;

exports[`strips TypeScript type syntax 7`] = `
{
  "autodisplay": false,
  "body": "() => {
let v;
return {v};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [
    "v",
  ],
  "secrets": Set {},
}
`;

exports[`strips TypeScript type syntax 8`] = `
{
  "autodisplay": false,
  "body": "() => {
const obj = {a: 1, b: 2};
return {obj};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [
    "obj",
  ],
  "secrets": Set {},
}
`;

exports[`strips TypeScript type syntax 9`] = `
{
  "autodisplay": false,
  "body": "(B) => {
class A extends B {  p = 1; static s = 2; q; }
return {A};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "B",
  ],
  "outputs": [
    "A",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles JavaScript expressions 1`] = `
{
  "autodisplay": true,
  "body": "() => {
return (
1 + 2
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles JavaScript expressions 2`] = `
{
  "autodisplay": true,
  "body": "(x,y) => {
return (
x + y
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "x",
    "y",
  ],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles JavaScript expressions 3`] = `
{
  "autodisplay": true,
  "body": "async (z) => {
return (
await z
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "z",
  ],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles JavaScript expressions 4`] = `
{
  "autodisplay": false,
  "body": "(display) => {
return (
display(1), display(2)
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "display",
  ],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles JavaScript programs 1`] = `
{
  "autodisplay": false,
  "body": "() => {
const x = 1, y = 2;
return {x,y};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [
    "x",
    "y",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles JavaScript programs 2`] = `
{
  "autodisplay": false,
  "body": "(x,y) => {
x + y;
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "x",
    "y",
  ],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles JavaScript programs 3`] = `
{
  "autodisplay": false,
  "body": "async (z) => {
await z;
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "z",
  ],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles JavaScript programs 4`] = `
{
  "autodisplay": false,
  "body": "async () => {
const {default: data} = await import("https://example.com", {with: {type: "json"}}).then((module) => {
  if (!("default" in module)) throw new SyntaxError(\`export 'default' not found\`);
  return module;
});

return {data};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [
    "data",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript dynamic imports 1`] = `
{
  "autodisplay": true,
  "automutable": false,
  "autoview": false,
  "body": "function(){return(
import("https://cdn.jsdelivr.net/npm/d3/+esm")
)}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript dynamic imports 2`] = `
{
  "autodisplay": true,
  "automutable": false,
  "autoview": false,
  "body": "function(){return(
import("https://cdn.jsdelivr.net/npm/d3@7/+esm")
)}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript dynamic imports 3`] = `
{
  "autodisplay": true,
  "automutable": false,
  "autoview": false,
  "body": "function(){return(
import("https://cdn.jsdelivr.net/npm/@observablehq/plot/+esm")
)}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript dynamic imports 4`] = `
{
  "autodisplay": true,
  "automutable": false,
  "autoview": false,
  "body": "function(){return(
import("https://cdn.jsdelivr.net/npm/lodash/fp/+esm")
)}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript dynamic imports 5`] = `
{
  "autodisplay": true,
  "automutable": false,
  "autoview": false,
  "body": "function(){return(
import("https://cdn.jsdelivr.net/npm/three@0.150.1/examples/jsm/controls/OrbitControls.js/+esm")
)}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript dynamic imports 6`] = `
{
  "autodisplay": true,
  "automutable": false,
  "autoview": false,
  "body": "function(){return(
import("https://cdn.jsdelivr.net/npm/leaflet/dist/leaflet.css")
)}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript import-withs 1`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default).derive([], __variable._module);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript import-withs 2`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default).derive(["foo"], __variable._module);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript import-withs 3`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default).derive([{name: "foo", alias: "bar"}], __variable._module);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript import-withs 4`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color: red} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default).derive(["foo"], __variable._module);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("red")?.import("color", "red", module);
  return {};
}));

return {red};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "red",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript import-withs of views and mutables 1`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color, viewof$color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default).derive([{name: "foo", alias: "bar"}], __variable._module);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  outputs.get("viewof$color")?.import("viewof color", "viewof$color", module);
  return {};
}));

return {color,viewof$color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "color",
    "viewof$color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript import-withs of views and mutables 2`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default).derive(["foo", "viewof foo"], __variable._module);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript import-withs of views and mutables 3`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default).derive([{name: "foo", alias: "bar"}, {name: "viewof foo", alias: "viewof bar"}], __variable._module);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript import-withs of views and mutables 4`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default).derive(["foo", "mutable foo"], __variable._module);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript import-withs of views and mutables 5`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default).derive([{name: "foo", alias: "bar"}, {name: "mutable foo", alias: "mutable bar"}], __variable._module);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript import-withs of views and mutables 6`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default).derive(["foo", "bar", "viewof bar", {name: "baz", alias: "qux"}, {name: "mutable baz", alias: "mutable qux"}], __variable._module);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript imports 1`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript imports 2`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3@173.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript imports of mutables 1`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {foo, mutable$foo} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("foo")?.import("foo", module);
  outputs.get("mutable$foo")?.import("mutable foo", "mutable$foo", module);
  return {};
}));

return {foo,mutable$foo};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "foo",
    "mutable$foo",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript imports of mutables 2`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {foo: bar, mutable$foo: mutable$bar} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("bar")?.import("foo", "bar", module);
  outputs.get("mutable$bar")?.import("mutable foo", "mutable$bar", module);
  return {};
}));

return {bar,mutable$bar};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "bar",
    "mutable$bar",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript imports of views 1`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {figure, rotation, viewof$rotation} = await (import("https://api.observablehq.com/@rreusser/drawing-3d-objects-with-svg.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("figure")?.import("figure", module);
  outputs.get("rotation")?.import("rotation", module);
  outputs.get("viewof$rotation")?.import("viewof rotation", "viewof$rotation", module);
  return {};
}));

return {figure,rotation,viewof$rotation};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "figure",
    "rotation",
    "viewof$rotation",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript imports of views 2`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {figure, rotation: rot, viewof$rotation: viewof$rot} = await (import("https://api.observablehq.com/@rreusser/drawing-3d-objects-with-svg.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("figure")?.import("figure", module);
  outputs.get("rot")?.import("rotation", "rot", module);
  outputs.get("viewof$rot")?.import("viewof rotation", "viewof$rot", module);
  return {};
}));

return {figure,rot,viewof$rot};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "figure",
    "rot",
    "viewof$rot",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles SQL cells 1`] = `
{
  "autodisplay": true,
  "body": "async (Inputs,DatabaseClient,db) => {
return (
Inputs.table(await (await DatabaseClient.of(db, "db")).sql\`SELECT 1 + 2\`)
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "Inputs",
    "DatabaseClient",
    "db",
  ],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles SQL cells 2`] = `
{
  "autodisplay": false,
  "body": "async (display,Inputs,DatabaseClient,db) => {
const three = ((_) => (display(Inputs.table(_)), _))(await (await DatabaseClient.of(db, "db")).sql\`SELECT 1 + 2\`);
return {three};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "display",
    "Inputs",
    "DatabaseClient",
    "db",
  ],
  "outputs": [
    "three",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript class expressions 1`] = `
{
  "autodisplay": false,
  "body": "() => {
class Foo {}
return {Foo};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [
    "Foo",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript expressions 1`] = `
{
  "autodisplay": true,
  "body": "() => {
return (
1 + 2
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript expressions 2`] = `
{
  "autodisplay": true,
  "body": "() => {
return (
1, 2
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript expressions 3`] = `
{
  "autodisplay": true,
  "body": "() => {
return (
1, 2 // comment
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript expressions 4`] = `
{
  "autodisplay": true,
  "body": "() => {
return (
(1), (2)
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript expressions 5`] = `
{
  "autodisplay": true,
  "body": "() => {
return (
(1 + 2)
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript expressions 6`] = `
{
  "autodisplay": true,
  "body": "() => {
return (
{x: 42}
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript expressions 7`] = `
{
  "autodisplay": true,
  "body": "() => {
return (
({x: 42})
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript function expressions 1`] = `
{
  "autodisplay": false,
  "body": "() => {
function foo() {}
return {foo};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [
    "foo",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript imports 1`] = `
{
  "autodisplay": false,
  "body": "async () => {
const {foo} = await import("https://cdn.jsdelivr.net/npm/bar/+esm").then((module) => {
  if (!("foo" in module)) throw new SyntaxError(\`export 'foo' not found\`);
  return module;
});

return {foo};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [
    "foo",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript imports 2`] = `
{
  "autodisplay": false,
  "body": "async () => {
const {} = await import("https://cdn.jsdelivr.net/npm/bar/+esm");

}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript imports 3`] = `
{
  "autodisplay": false,
  "body": "async () => {

}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript imports 4`] = `
{
  "autodisplay": false,
  "body": "async () => {
const {default: data} = await import("https://example.com", {with: {type: "json"}}).then((module) => {
  if (!("default" in module)) throw new SyntaxError(\`export 'default' not found\`);
  return module;
});

return {data};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [
    "data",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript programs 1`] = `
{
  "autodisplay": false,
  "body": "() => {
const x = 1, y = \`hello\`;
return {x,y};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [
    "x",
    "y",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript programs 2`] = `
{
  "autodisplay": false,
  "body": "(x,y) => {
x + (y);
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "x",
    "y",
  ],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript programs 3`] = `
{
  "autodisplay": false,
  "body": "() => {

}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript programs 4`] = `
{
  "autodisplay": false,
  "body": "() => {
const sum = (a, b) => a + b;
return {sum};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [
    "sum",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript programs 5`] = `
{
  "autodisplay": false,
  "body": "() => {

}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript programs 6`] = `
{
  "autodisplay": false,
  "body": "() => {

}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript programs 7`] = `
{
  "autodisplay": false,
  "body": "() => {
class Dict {  }
return {Dict};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [
    "Dict",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript programs 8`] = `
{
  "autodisplay": false,
  "body": "(display) => {
class C {  m(x) { display(x); } }
return {C};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "display",
  ],
  "outputs": [
    "C",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript statements 1`] = `
{
  "autodisplay": false,
  "body": "() => {
1 + 2;
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript statements 2`] = `
{
  "autodisplay": false,
  "body": "() => {
1, 2;
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript statements 3`] = `
{
  "autodisplay": false,
  "body": "() => {
(1), (2);
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript statements 4`] = `
{
  "autodisplay": false,
  "body": "() => {
(1 + 2);
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript statements 5`] = `
{
  "autodisplay": false,
  "body": "() => {
{x: 42};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles TypeScript statements 6`] = `
{
  "autodisplay": false,
  "body": "() => {
({x: 42});
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles dynamic npm: imports 1`] = `
{
  "autodisplay": false,
  "body": "async () => {
const d3 = await import("https://cdn.jsdelivr.net/npm/d3/+esm");
return {d3};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [
    "d3",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles empty cells 1`] = `
{
  "autodisplay": false,
  "body": "() => {

}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles empty cells 2`] = `
{
  "autodisplay": false,
  "body": "() => {

}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles empty cells 3`] = `
{
  "autodisplay": false,
  "body": "() => {

}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles empty cells 4`] = `
{
  "autodisplay": false,
  "body": "() => {

}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles empty cells 5`] = `
{
  "autodisplay": false,
  "body": "() => {

}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles import.meta.resolve 1`] = `
{
  "autodisplay": true,
  "body": "() => {
return (
"https://cdn.jsdelivr.net/npm/d3/+esm"
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles import.meta.resolve 2`] = `
{
  "autodisplay": true,
  "body": "() => {
return (
new URL("./test", document.baseURI).href
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles import.meta.resolve 3`] = `
{
  "autodisplay": true,
  "body": "() => {
return (
"./test"
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles node cells 1`] = `
{
  "autodisplay": true,
  "body": "(Interpreter) => {
return (
Interpreter("node", {id: -1, format: "buffer"}).run(\`process.stdout.write(\\\`Node $\\{process.version}\\\`);\`).then((file) => file.arrayBuffer())
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "Interpreter",
  ],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles node cells 2`] = `
{
  "autodisplay": true,
  "body": "(Interpreter) => {
return (
Interpreter("node", {id: -1, format: "buffer"}).run(\`process.stdout.write(\\\`Node \\\\$\\{process.version}\\\`);\`).then((file) => file.arrayBuffer())
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "Interpreter",
  ],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles node cells 3`] = `
{
  "autodisplay": true,
  "body": "(Interpreter) => {
return (
Interpreter("node", {id: -1, format: "buffer"}).run(\`process.stdout.write(\\\`Node \\\\\\\\$\\{process.version}\\\`);\`).then((file) => file.arrayBuffer())
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "Interpreter",
  ],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles node cells 4`] = `
{
  "autodisplay": true,
  "body": "(Interpreter) => {
return (
Interpreter("node", {id: -1, format: "buffer"}).run(\`process.stdout.write(\\\`Node $\\\\{process.version}\\\`);\`).then((file) => file.arrayBuffer())
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "Interpreter",
  ],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles node cells 5`] = `
{
  "autodisplay": true,
  "body": "(Interpreter) => {
return (
Interpreter("node", {id: -1, format: "buffer"}).run(\`process.stdout.write(\\\`Node \\\\$\\\\{process.version}\\\`);\`).then((file) => file.arrayBuffer())
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "Interpreter",
  ],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles static imports with {type: 'observable'} 1`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles static imports with {type: 'observable'} 2`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3@173.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles static imports with {type: 'observable'} 3`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {Scrubber} = await (import("https://api.observablehq.com/@mbostock/scrubber.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("Scrubber")?.import("Scrubber", module);
  return {};
}));

return {Scrubber};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "Scrubber",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles static imports with {type: 'observable'} 4`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {Scrubber} = await (import("https://api.observablehq.com/@mbostock/scrubber@255.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("Scrubber")?.import("Scrubber", module);
  return {};
}));

return {Scrubber};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "Scrubber",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles static imports with {type: 'observable'} 5`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {viewof$rotation} = await (import("https://api.observablehq.com/@rreusser/drawing-3d-objects-with-svg.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("viewof$rotation")?.import("viewof rotation", "viewof$rotation", module);
  return {};
}));

return {viewof$rotation};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "viewof$rotation",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles static npm: imports 1`] = `
{
  "autodisplay": false,
  "body": "async () => {
const d3 = await import("https://cdn.jsdelivr.net/npm/d3/+esm");

return {d3};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [
    "d3",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles static npm: imports 2`] = `
{
  "autodisplay": false,
  "body": "async () => {
const {default: _} = await import("https://cdn.jsdelivr.net/npm/lodash/+esm").then((module) => {
  if (!("default" in module)) throw new SyntaxError(\`export 'default' not found\`);
  return module;
});

return {_};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [
    "_",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles static npm: imports 3`] = `
{
  "autodisplay": false,
  "body": "async () => {
const [{}, {}] = await Promise.all([import("https://cdn.jsdelivr.net/npm/d3/+esm"), import("https://cdn.jsdelivr.net/npm/isoformat/+esm")]);

}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles static observable: imports 1`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles static observable: imports 2`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3@173.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles static observable: imports 3`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {Scrubber} = await (import("https://api.observablehq.com/@mbostock/scrubber.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("Scrubber")?.import("Scrubber", module);
  return {};
}));

return {Scrubber};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "Scrubber",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles static observable: imports 4`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {Scrubber} = await (import("https://api.observablehq.com/@mbostock/scrubber@255.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("Scrubber")?.import("Scrubber", module);
  return {};
}));

return {Scrubber};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "Scrubber",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles static observable: imports 5`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {viewof$rotation} = await (import("https://api.observablehq.com/@rreusser/drawing-3d-objects-with-svg.js?v=4").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("viewof$rotation")?.import("viewof rotation", "viewof$rotation", module);
  return {};
}));

return {viewof$rotation};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "outputs": [
    "viewof$rotation",
  ],
  "secrets": Set {},
}
`;
